main.tf
provider "aws" {
    region = "us-east-2"
}

resource "aws_instance" "nginx-server"{
    ami             = "ami-05efc83cb5512477c"
    instance_type   = "t3.micro"

    user_data = <<-EOF
                #!/bin/bash
                sudo yum install -y nginx
                sudo systemctl enable nginx
                sudo syttemctl start nginx
                EOF
key_name =aws_key_pair.nginex-server-ssh.key_name
vpc_security_group_ids = [aws_security_group.nginex-server-sg.id]

tags = {
    Name        = "nginx-server"
    Enviroment  = "test"
    Owner       = "frdsoto.25@gmail.com"
    Team        = "DevOps"
    Project     = "Webinar"
    }


}



resource "aws_key_pair" "nginex-server-ssh"{
    key_name    = "nginex-server"
    public_key  = file("nginex-server.pub")

}

resource "aws_security_group" "nginex-server-sg"{
    name        = "nginex-server"
    description = "Allow SSH and HTTP"

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress{
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]

    }
}



output "server_public_ip"{
    description = "Direccion IP Publica"
    value       = aws_instance.nginx-server.public_ip
    }

output "server_public_dns"{
    description = "Direccion IP Publica"
    value       = aws_instance.nginx-server.public_dns
    }

output "Name"{
    description = "Direccion IP Publica"
    value       = aws_instance.nginx-server.tags.Name
    }

output "Owner"{
    description = "Direccion IP Publica"
    value       = aws_instance.nginx-server.tags.Owner
    }
